# agents-automations

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  DEPLOYMENT_STATUS.md  IMPROVEMENT_PASS_STATUS.md  LICENSE  PRODUCTION_DEPLOYMENT.md  README.md  SECURITY.md  SUBSCRIPTION_FIRST_EXPANSION_STATUS.md  USER_REQUIREMENTS_TRACEABILITY.md  linked_list.py  mkdocs.yml  test_linked_list.py  test_safe_read.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  doc_update.yml  recipe_request.yml  source_drift.yml
.github/workflows/: deploy.yml  link-check.yml  pr-build.yml
docs/: changelog.md  glossary-plain.md  glossary.md  index.md  llms.txt  model-freshness.md  roadmap.md  robots.txt  source-audit.md  source-map.md  starter-kits.md
docs/agent-factory/: agent-portfolio-design.md  candidate-ranking.md  cross-platform-porting.md  eval-generation.md  factory-operating-model.md  index.md  launch-readiness.md  maintenance-and-drift.md  prompt-pack-generation.md  (+3 more)
evals/: README.md  USAGE-chatgpt.md  USAGE-claude.md  USAGE-codex.md  USAGE-copilot.md  USAGE-gemini.md  USAGE-programmatic.md
overrides/: main.html
pubmed-digest/: .env.example  .gitignore  README.md  config.py  config.yaml  dedupe.py  digest.py  fetch_preprints.py  fetch_pubmed.py  models.py  notify_email.py  pyproject.toml  rank.py  requirements.txt  run.py
pubmed-digest/tests/: conftest.py  test_dedupe.py  test_rank.py
sandbox/: test_file.txt
scripts/: qa-site.mjs  validate-starter-kits.mjs
site/: 404.html  index.html  sitemap.xml
(+416 files in other folders)
